[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wfm"]


[project]
name = "warframe-market-api"
version = "0.0.1"
authors = [
  { name="osteofelidae", email="osteofelidae@gmail.com" },
]
description = "Comprehensive API wrapper for warframe.market"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/osteofelidae/warframe-market-api"
Issues = "https://github.com/osteofelidae/warframe-market-api/issues"